# pyproject

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  dev-requirements.txt  jenkinsfile  pyproject.toml  requirements.txt
.myvenv/: pyvenv.cfg
.myvenv/Scripts/: activate  activate.bat
demo_app/: app.py
demo_app/models/: user.py
demo_app/routes/: api.py
demo_app/utils/: helpers.py
tests/: test_app.py
tests/test_models/: test_user.py
tests/test_utils/: test_helpers.py
